--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,7 +49,7 @@ Primary use:    Ecommerce
 -------------------------------------------------------------------*/
 
 
-@import url('https://fonts.cdnfonts.com/css/segoe-ui-4');
+/* @import url('https://fonts.cdnfonts.com/css/segoe-ui-4'); */
 body{
 font-family: "Segoe UI", Helvetica, Arial, sans-serif;
 	font-size: 13px;
@@ -7310,3 +7310,6 @@ svg {
   .loginBtn--google:focus {
     background: #E74B37;
   }
+.panel-body{
+    overflow: scroll;
+}
